--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Shaw Talebi
+title: Shivam Panigrahi
 #logo: /assets/img/headshot_circle.png
 logo: /assets/img/dsc_0008.png
-#description: text below image
+description: Innovative IT professional with a track record of delivering cutting-edge solutions and driving digital transformation
 show_downloads: true
 theme: jekyll-theme-minimal
