--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Shivam Panigrahi
 #logo: /assets/img/headshot_circle.png
 logo: /assets/img/dsc_0008-modified.png
-description: Innovative IT professional with a track record of delivering cutting-edge solutions and driving digital transformation
+description: Experienced IT innovator known for consistently delivering pioneering solutions and spearheading impactful digital transformations.
 show_downloads: true
 theme: jekyll-theme-minimal
